# interactive_pipe

./: .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  code_architecture.md  index.html  mkdocs.yml  pyproject.toml  pyqt_video.py  qt_gui_display.py  readme.md  requirements.txt  tech_debt.md
.claude/skills/build-interactive-pipeline/: SKILL.md
.github/workflows/: docs.yaml  publish.yaml  pyright.yaml  pytest.yaml  ruff-format.yaml  ruff-lint.yaml
demo/: button_demo.py  color_demo.py  colored_checkerboard_rotation_demo.py  detached_panel_demo.py  grouped_controls_demo.py  image_analysis_demo.py  image_editing_demo.py  independant_curve_image_demo.py  independent_curve_image_demo.py  jukebox.py  jukebox_demo.py  key_event_demo.py  multi_image.ipynb  multi_image.py  panel_demo.py  panel_position_demo.py  table_demo.py  time_physics_demo.py  time_wave_demo.py  widgets_showcase.py
doc/: inline_syntax.md  tech_debt.md
docs/: architecture.md  faq.md  index.md  requirements.txt  roadmap.md
docs/api/: context.md  controls.md  core.md  data-objects.md  data_objects.md  decorators.md  graphical.md  headless.md  helper.md  index.md  internals.md  panel.md
docs/getting-started/: backends.md  installation.md  quickstart.md  tutorials.md
docs/guide/: audio.md  backends.md  context-layout.md  context.md  controls.md  curves.md  decorators.md  examples.md  filters.md  inline-syntax.md  keyboard.md  layout.md  outputs.md  panels.md  tables.md  tips.md
samples/: decorated_pipeline.py  decorated_pipeline_abbreviated.py  object_oriented_pipeline_declarations.py  readme.md
samples/interact_sample/: filters_library.py  interact_sample.py  test_filter_library.py
samples/isp/: isp_filters.py  isp_helper_filters.py  isp_library.py  run_isp.py
src/: cache.py
src/interactive_pipe/: __init__.py  cache.py  core.py  engine.py  filter.py  pipe_core.py  pipe_headless.py  sliders.py
src/interactive_pipe/core/: backend.py  cache.py  context.py  context_tracking.py  control.py  decorator.py  engine.py  filter.py  framework_state.py  graph.py  keyboard.py  pipeline.py  signature.py  sliders.py
src/interactive_pipe/data_objects/: audio.py  curves.py  data.py  image.py  music.py  parameters.py  table.py
src/interactive_pipe/graphical/: controller.py  dpg_control.py  dpg_gui.py  filter.py  gradio_control.py  gradio_gui.py  gradio_layout.py  gradio_outputs.py  graphical_pipe.py  gui.py  keyboard.py  kivy_control.py  kivy_gui.py  mpl_control.py  mpl_gui.py  mpl_window.py  nb_control.py  nb_gui.py  qt_audio.py  qt_backend.py  qt_control.py  qt_gui.py  qt_image.py  qt_panels.py  qt_widgets.py  textual_control.py  textual_gui.py  textual_window.py  window.py
src/interactive_pipe/headless/: control.py  control_abbreviation.py  keyboard.py  panel.py  pipeline.py
src/interactive_pipe/helper/: _private.py  choose_backend.py  control_abbreviation.py  decorator.py  filter_decorator.py  keyword_args_analyzer.py  pipeline_decorator.py
static/: main-page.css  prism-duotone-light.css
test/: sample_functions.py  test_cache.py  test_context.py  test_context_compatibility.py  test_control_abbreviations.py  test_control_registry.py  test_controller.py  test_core.py  test_core_exceptions.py  test_curves.py  test_data_objects_exceptions.py  test_decorator.py  test_dpg_backend.py  test_edge_cases.py  test_engine.py  test_filter.py  test_framework_state.py  test_graph_cache.py  test_graphical_exceptions.py  test_headless.py  test_headless_exceptions.py  test_image.py  test_legacy_removal.py  test_legacy_warnings.py  test_mutable_defaults.py  test_parameters.py  test_qt_backend_cascade.py  test_readonly_inputs.py  test_recorder.py  test_smoke_gradio.py  test_smoke_mpl.py  test_smoke_qt.py  test_table.py
tests/: helper.py  test_cache.py  test_core.py  test_engine.py  test_filter.py
